data/derived/sp14/progs/unify/prog4103.ml.out
Characters 110-122:
  let seen' = if List.mem (t) then h in
                 ^^^^^^^^^^^^
Error: This expression has type 'a list list -> bool
       but an expression was expected of type bool
